Fix responsivity on iOS mobile

--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -76,7 +76,7 @@
     background-size: cover;
     background-position: center;
     /* maybe even background-attachment: fixed; ? */
-    z-index: 10;
+    z-index: -10;
     filter: contrast(0.6) brightness(0.4) saturate(1.3) grayscale(0.3);
 }
 
@@ -134,13 +134,17 @@ a[href] .itemContent h2::after {
     .portfolioGrid .item {
         grid-column: 1 / 2;
         aspect-ratio: unset !important;
-        height: 200px; /* to-do: try to do this without setting height 💩*/
         margin-bottom: 0.5rem;
     }
     .itemInner {
         margin: 0;
         padding: 2rem;
         font-size: 1em;
+        display: inline-block;
+        height: unset;
+    }
+    .mediaLogo {
+        margin-top: 1rem;
     }
     .background {
         margin: 3rem 0;
